<resources>
    <string name="app_name">Math</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="number_of_tasks">Number of tasks</string>
    <string name="number_of_answers">Number of answers</string>
    <string name="game_duration">Game duration</string>
    <string name="statistics">Statistics</string>
    <string name="total_tasks">Total tasks</string>
    <string name="number_of_correct_answers">Number of correct answers</string>
    <string name="mathematical_operations">Mathematical operations</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="start">Start</string>
    <string name="enter_range_hint">Enter value</string>
    <string name="quick_settings">Quick settings</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="enter_value_here">Enter value here</string>

    <string name="msg_error_incorrect_value">Range start value cannot be greater than or equal to end value</string>
    <string name="time">minutes</string>
    <string name="not_limited">Not limited</string>
    <string name="tasks">tasks</string>
    <string name="manual_input">Manual input</string>
    <string name="variants">variants</string>
    <string name="your_answer">Enter your answer</string>
    <string name="enter_the_number">Enter the number</string>
    <string name="text_time">Time</string>
    <string name="average_time">Average per task</string>
    <string name="quality">Quality</string>
    <string name="time_in_play">Time in game</string>
    <string name="correct_answers">Correct answers</string>
    <string name="operation_disabled">Operation disabled</string>
    <string name="operation_enabled">Operation enabled</string>
    <string name="continue_game">Continue</string>
    <string name="totals">Totals</string>
    <string name="finish">Finish</string>
    <string name="pause">Pause</string>
    <string name="messages_header">Messages</string>
    <!-- Preference Titles -->
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>

    <!-- Sync Preferences -->
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string-array name="tabs">

        <item>@string/addition</item>
        <item>@string/subtraction</item>
        <item>@string/multiplication</item>
        <item>@string/division</item>

    </string-array>
    <string name="privacy_policy">Privacy policy</string>
    <string name="rate_us">Rate us</string>
    <string name="exit">Exit</string>
    <string name="this_operation_will_take_values_in_this_range">This operation will take values in this range</string>
    <string name="toast_msg_must_be_enabled">At least one operation must be enabled</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="do_you_really_want_exit">Do you really want to go out?</string>
</resources>