<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.v.nevi.p.sv.android.math.screens.playsettings.range.EnterValueViewModel" />

    </data>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.playsettings.range.EnterValueDialogFragment"
    android:padding="16dp"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/opacity_black"
            android:textSize="16sp"
            android:text="@={viewmodel.value}"
            android:inputType="numberSigned"
            android:maxLength="10"
            android:hint="@string/enter_value_here"
            android:theme="@style/EditTextStyle"
            android:backgroundTint="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/white"
            android:onClick="@{()->viewmodel.onCancelClick()}"/>

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:onClick="@{()->viewmodel.onDoneClick()}"/>

    </LinearLayout>
</LinearLayout>
</layout>