<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.v.nevi.p.sv.android.math.screens.playsettings.PlaySettingsViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabPaddingEnd="0dp"
            app:tabPaddingStart="0dp"
            />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tab_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/view_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            >
        <TextView
            android:id="@+id/text_game_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_duration"
            android:textSize="24sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/game_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="not limited" />

        <com.google.android.material.slider.Slider
            android:id="@+id/game_duration_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:valueFrom="0"
            android:valueTo="20"
            android:stepSize="1"
            app:startValue="@{viewmodel.playSettings.gameDuration}"
            app:viewModel="@{viewmodel}"
            app:textViewLabel="@{gameDuration}"
            />

        <TextView
            android:id="@+id/text_number_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/number_of_tasks"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/number_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="not limited" />

        <com.google.android.material.slider.Slider
            android:id="@+id/number_tasks_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:valueFrom="0"
            android:valueTo="100"
            android:stepSize="1"
            app:startValue="@{viewmodel.playSettings.numberTasks}"
            app:viewModel="@{viewmodel}"
            app:textViewLabel="@{numberTasks}"
            />

        <TextView
            android:id="@+id/text_number_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/number_of_answers"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/number_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="not limited" />

        <com.google.android.material.slider.Slider
            android:id="@+id/number_answers_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:valueFrom="0"
            android:valueTo="4"
            android:stepSize="1"
            app:startValue="@{viewmodel.playSettings.numberAnswers}"
            app:viewModel="@{viewmodel}"
            app:textViewLabel="@{numberAnswers}"
            />

        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_marginTop="16dp"
            android:onClick="@{()->viewmodel.onStartClick(startButton)}"/>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>