<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewmodel"
            type="com.v.nevi.p.sv.android.math.screens.statistics.StatisticsViewModel" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StatisticsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/statistics"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_number_total_tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/total_tasks"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/number_total_tasks"
                app:layout_constraintEnd_toStartOf="@id/number_total_tasks"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_text_view" />

            <TextView
                android:id="@+id/number_total_tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:text="@{viewmodel.totalTasks}"
                app:layout_constraintBottom_toBottomOf="@id/text_number_total_tasks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/text_number_total_tasks"
                app:layout_constraintTop_toBottomOf="@id/date_text_view"
                tools:text="100" />

            <TextView
                android:id="@+id/text_number_correct_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/correct_answers"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/number_correct_answers"
                app:layout_constraintEnd_toStartOf="@id/number_correct_answers"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_number_total_tasks" />

            <TextView
                android:id="@+id/number_correct_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:text="@{viewmodel.correctAnswers}"
                app:layout_constraintBottom_toBottomOf="@id/text_number_correct_answers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/text_number_correct_answers"
                app:layout_constraintTop_toBottomOf="@id/number_total_tasks"
                tools:text="100" />

            <TextView
                android:id="@+id/text_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/quality"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/quality"
                app:layout_constraintEnd_toStartOf="@id/quality"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_number_correct_answers" />

            <TextView
                android:id="@+id/quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:text="@{viewmodel.quality}"
                app:layout_constraintBottom_toBottomOf="@id/text_quality"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/text_quality"
                app:layout_constraintTop_toBottomOf="@id/number_correct_answers"
                tools:text="100" />

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_time"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/time"
                app:layout_constraintEnd_toStartOf="@id/time"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_quality" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:text="@{viewmodel.time}"
                app:layout_constraintBottom_toBottomOf="@id/text_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/text_time"
                app:layout_constraintTop_toBottomOf="@id/quality"
                tools:text="100" />

            <TextView
                android:id="@+id/text_average_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/average_time"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/quality_card_view"
                app:layout_constraintEnd_toStartOf="@id/quality_card_view"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_time" />

            <TextView
                android:id="@+id/quality_card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:text="@{viewmodel.averageTime}"
                app:layout_constraintBottom_toBottomOf="@id/text_average_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/text_average_time"
                app:layout_constraintTop_toBottomOf="@id/time"
                tools:text="100" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/exit"
        android:onClick="@{()->viewmodel.onExit()}"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:itemsStatistics="@{viewmodel.listStatisticsItems}"
        app:layout_constraintTop_toBottomOf="@id/exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ad_view"
        app:layout_constraintVertical_bias="0.0"/>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2946397644393077/4949151727"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>