<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Понедельник, 11 октября, 2021" />

            <TextView
                android:id="@+id/text_number_tasks_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/total_tasks"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/number_tasks_all"
                app:layout_constraintEnd_toStartOf="@id/number_tasks_all"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_text_view" />

            <TextView
                android:id="@+id/number_tasks_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/text_number_tasks_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/text_number_tasks_all"
                app:layout_constraintTop_toBottomOf="@id/date_text_view"
                tools:text="100" />

            <TextView
                android:id="@+id/text_number_right_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/number_of_correct_answers"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/number_right_answers"
                app:layout_constraintEnd_toStartOf="@id/number_right_answers"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_number_tasks_all" />

            <TextView
                android:id="@+id/number_right_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/text_number_right_answers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/text_number_right_answers"
                app:layout_constraintTop_toBottomOf="@id/number_tasks_all"
                tools:text="100" />

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/game_duration"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/time"
                app:layout_constraintEnd_toStartOf="@id/time"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_number_right_answers" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/text_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/text_time"
                app:layout_constraintTop_toBottomOf="@id/number_right_answers"
                tools:text="100" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

